[package]
name = "replacer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
regex = "1.4.3"
glob = "0.3.0"
log = "0.4"
wasm-logger = "0.2"
yew = "0.19"
indexmap = "1.9.1"
wasm-bindgen-futures = "0.4"

[dependencies.crc32fast]
version = "1.3.2"
default-features = false


[dependencies.gloo-timers]
version = "0.2.4"
features = ["futures"]

[dependencies.ybc]
git = "https://github.com/mneilly/ybc.git"
rev = "36abeae"




# [dependencies.material-yew]
# version = "0.2.0"
# features = ["full"]